[project]
name = "tutor-progress-env"
version = "0.1.0"
description = "OpenEnv environment for evaluating AI tutors"
authors = [{ name = "Sanjeev" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.1.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"